y.output
Terminals unused in grammar

   NOT


Grammar

    0 $accept: Start $end

    1 Start: Global_Declaration Function_Definitions Main_Function
    2      | Main_Function

    3 Global_Declaration: DECL Variable_Declaration ENDDECL

    4 Variable_Declaration: Variable_Declaration Data_Type Array_Variable_Function SemiColon
    5                     | Data_Type Array_Variable_Function SemiColon

    6 Data_Type: INTEGER
    7          | BOOL

    8 Array_Variable_Function: Array_Variable_Function Comma_Operator Array
    9                        | Array_Variable_Function Comma_Operator ID
   10                        | Array_Variable_Function Comma_Operator Function
   11                        | Array
   12                        | ID
   13                        | Function

   14 Array: ID Right_Square_Bracket Integer_Constant Left_Square_Bracket

   15 Function: ID Open_BRACKET ParaMeters Close_BRACKET

   16 ParaMeters: ParaMeters SemiColon Data_Type Parameter_Ids_Pointer
   17           | Data_Type Parameter_Ids_Pointer

   18 Parameter_Ids_Pointer: Parameter_Ids_Pointer Comma_Operator ID
   19                      | Parameter_Ids_Pointer Comma_Operator Pointer_ID
   20                      | ID
   21                      | Pointer_ID

   22 Function_Definitions: Function_Definitions Function_Head Inside_function
   23                     | Function_Head Inside_function

   24 Inside_function: Right_Curly_BRACKET Local_Declarations Function_Body Left_Curly_BRACKET
   25                | Right_Curly_BRACKET Function_Body Left_Curly_BRACKET

   26 Function_Head: Data_Type Function

   27 Local_Declarations: DECL Function_Variable_Declaration ENDDECL

   28 Function_Variable_Declaration: Function_Variable_Declaration Data_Type Local_Variable SemiColon
   29                              | Data_Type Local_Variable SemiColon

   30 Local_Variable: Local_Variable Comma_Operator ID
   31               | ID

   32 Statements: Statements Stmnt
   33           | Stmnt

   34 Function_Body: THEBEGIN Statements END

   35 Stmnt: ID Assignment_OP Expressions SemiColon
   36      | IF Expressions THEN Statements ELSE Statements ENDIF SemiColon
   37      | IF Expressions THEN Statements ENDIF SemiColon
   38      | WHILE Expressions DO Statements ENDWHILE SemiColon
   39      | RETURN Expressions SemiColon
   40      | READ Open_BRACKET Elements Close_BRACKET SemiColon
   41      | WRITE Open_BRACKET Expressions Close_BRACKET SemiColon

   42 Expressions: AriExps
   43            | Open_BRACKET Expressions Log_OP Expressions Close_BRACKET
   44            | Open_BRACKET L_NOT Expressions Close_BRACKET

   45 AriExps: AriExps PLUS AriExps
   46        | AriExps MINUS AriExps
   47        | AriExps MULTIPLY AriExps
   48        | AriExps DIVIDE AriExps
   49        | Elements

   50 Array_Value: ID Right_Square_Bracket Elements Left_Square_Bracket

   51 Elements: /* empty */
   52         | Integer_Constant
   53         | ID
   54         | Array_Value
   55         | Function_In_Use

   56 Function_In_Use: ID Open_BRACKET AriExps Close_BRACKET

   57 Log_OP: LESSTHAN
   58       | LESSTHANEQ
   59       | GREATERTHAN
   60       | GREATERTHANEQ
   61       | EQUAL
   62       | NOTEQUAL
   63       | L_OR
   64       | L_AND

   65 Main_Function: INTEGER MAIN Open_BRACKET Close_BRACKET Right_Curly_BRACKET Main_Body Left_Curly_BRACKET

   66 Main_Body: Local_Declarations Function_Body
   67          | Function_Body


Terminals, with rules where they appear

$end (0) 0
error (256)
DECL (258) 3 27
ENDDECL (259) 3 27
THEBEGIN (260) 34
END (261) 34
IF (262) 36 37
ELSE (263) 36
DO (264) 38
ENDIF (265) 36 37
WHILE (266) 38
ENDWHILE (267) 38
RETURN (268) 39
READ (269) 40
THEN (270) 36 37
WRITE (271) 41
INTEGER (272) 6 65
BOOL (273) 7
MAIN (274) 65
Assignment_OP (275) 35
SemiColon (276) 4 5 16 28 29 35 36 37 38 39 40 41
Comma_Operator (277) 8 9 10 18 19 30
Right_Square_Bracket (278) 14 50
Left_Square_Bracket (279) 14 50
Right_Curly_BRACKET (280) 24 25 65
Left_Curly_BRACKET (281) 24 25 65
Open_BRACKET (282) 15 40 41 43 44 56 65
Close_BRACKET (283) 15 40 41 43 44 56 65
PLUS (284) 45
MINUS (285) 46
MULTIPLY (286) 47
DIVIDE (287) 48
LESSTHAN (288) 57
LESSTHANEQ (289) 58
NOT (290)
L_AND (291) 64
L_OR (292) 63
L_NOT (293) 44
GREATERTHAN (294) 59
GREATERTHANEQ (295) 60
EQUAL (296) 61
NOTEQUAL (297) 62
ID (298) 9 12 14 15 18 20 30 31 35 50 53 56
Pointer_ID (299) 19 21
Integer_Constant (300) 14 52


Nonterminals, with rules where they appear

$accept (46)
    on left: 0
Start (47)
    on left: 1 2, on right: 0
Global_Declaration (48)
    on left: 3, on right: 1
Variable_Declaration (49)
    on left: 4 5, on right: 3 4
Data_Type (50)
    on left: 6 7, on right: 4 5 16 17 26 28 29
Array_Variable_Function (51)
    on left: 8 9 10 11 12 13, on right: 4 5 8 9 10
Array (52)
    on left: 14, on right: 8 11
Function (53)
    on left: 15, on right: 10 13 26
ParaMeters (54)
    on left: 16 17, on right: 15 16
Parameter_Ids_Pointer (55)
    on left: 18 19 20 21, on right: 16 17 18 19
Function_Definitions (56)
    on left: 22 23, on right: 1 22
Inside_function (57)
    on left: 24 25, on right: 22 23
Function_Head (58)
    on left: 26, on right: 22 23
Local_Declarations (59)
    on left: 27, on right: 24 66
Function_Variable_Declaration (60)
    on left: 28 29, on right: 27 28
Local_Variable (61)
    on left: 30 31, on right: 28 29 30
Statements (62)
    on left: 32 33, on right: 32 34 36 37 38
Function_Body (63)
    on left: 34, on right: 24 25 66 67
Stmnt (64)
    on left: 35 36 37 38 39 40 41, on right: 32 33
Expressions (65)
    on left: 42 43 44, on right: 35 36 37 38 39 41 43 44
AriExps (66)
    on left: 45 46 47 48 49, on right: 42 45 46 47 48 56
Array_Value (67)
    on left: 50, on right: 54
Elements (68)
    on left: 51 52 53 54 55, on right: 40 49 50
Function_In_Use (69)
    on left: 56, on right: 55
Log_OP (70)
    on left: 57 58 59 60 61 62 63 64, on right: 43
Main_Function (71)
    on left: 65, on right: 1 2
Main_Body (72)
    on left: 66 67, on right: 65


state 0

    0 $accept: . Start $end

    DECL     shift, and go to state 1
    INTEGER  shift, and go to state 2

    Start               go to state 3
    Global_Declaration  go to state 4
    Main_Function       go to state 5


state 1

    3 Global_Declaration: DECL . Variable_Declaration ENDDECL

    INTEGER  shift, and go to state 6
    BOOL     shift, and go to state 7

    Variable_Declaration  go to state 8
    Data_Type             go to state 9


state 2

   65 Main_Function: INTEGER . MAIN Open_BRACKET Close_BRACKET Right_Curly_BRACKET Main_Body Left_Curly_BRACKET

    MAIN  shift, and go to state 10


state 3

    0 $accept: Start . $end

    $end  shift, and go to state 11


state 4

    1 Start: Global_Declaration . Function_Definitions Main_Function

    INTEGER  shift, and go to state 6
    BOOL     shift, and go to state 7

    Data_Type             go to state 12
    Function_Definitions  go to state 13
    Function_Head         go to state 14


state 5

    2 Start: Main_Function .

    $default  reduce using rule 2 (Start)


state 6

    6 Data_Type: INTEGER .

    $default  reduce using rule 6 (Data_Type)


state 7

    7 Data_Type: BOOL .

    $default  reduce using rule 7 (Data_Type)


state 8

    3 Global_Declaration: DECL Variable_Declaration . ENDDECL
    4 Variable_Declaration: Variable_Declaration . Data_Type Array_Variable_Function SemiColon

    ENDDECL  shift, and go to state 15
    INTEGER  shift, and go to state 6
    BOOL     shift, and go to state 7

    Data_Type  go to state 16


state 9

    5 Variable_Declaration: Data_Type . Array_Variable_Function SemiColon

    ID  shift, and go to state 17

    Array_Variable_Function  go to state 18
    Array                    go to state 19
    Function                 go to state 20


state 10

   65 Main_Function: INTEGER MAIN . Open_BRACKET Close_BRACKET Right_Curly_BRACKET Main_Body Left_Curly_BRACKET

    Open_BRACKET  shift, and go to state 21


state 11

    0 $accept: Start $end .

    $default  accept


state 12

   26 Function_Head: Data_Type . Function

    ID  shift, and go to state 22

    Function  go to state 23


state 13

    1 Start: Global_Declaration Function_Definitions . Main_Function
   22 Function_Definitions: Function_Definitions . Function_Head Inside_function

    INTEGER  shift, and go to state 24
    BOOL     shift, and go to state 7

    Data_Type      go to state 12
    Function_Head  go to state 25
    Main_Function  go to state 26


state 14

   23 Function_Definitions: Function_Head . Inside_function

    Right_Curly_BRACKET  shift, and go to state 27

    Inside_function  go to state 28


state 15

    3 Global_Declaration: DECL Variable_Declaration ENDDECL .

    $default  reduce using rule 3 (Global_Declaration)


state 16

    4 Variable_Declaration: Variable_Declaration Data_Type . Array_Variable_Function SemiColon

    ID  shift, and go to state 17

    Array_Variable_Function  go to state 29
    Array                    go to state 19
    Function                 go to state 20


state 17

   12 Array_Variable_Function: ID .
   14 Array: ID . Right_Square_Bracket Integer_Constant Left_Square_Bracket
   15 Function: ID . Open_BRACKET ParaMeters Close_BRACKET

    Right_Square_Bracket  shift, and go to state 30
    Open_BRACKET          shift, and go to state 31

    $default  reduce using rule 12 (Array_Variable_Function)


state 18

    5 Variable_Declaration: Data_Type Array_Variable_Function . SemiColon
    8 Array_Variable_Function: Array_Variable_Function . Comma_Operator Array
    9                        | Array_Variable_Function . Comma_Operator ID
   10                        | Array_Variable_Function . Comma_Operator Function

    SemiColon       shift, and go to state 32
    Comma_Operator  shift, and go to state 33


state 19

   11 Array_Variable_Function: Array .

    $default  reduce using rule 11 (Array_Variable_Function)


state 20

   13 Array_Variable_Function: Function .

    $default  reduce using rule 13 (Array_Variable_Function)


state 21

   65 Main_Function: INTEGER MAIN Open_BRACKET . Close_BRACKET Right_Curly_BRACKET Main_Body Left_Curly_BRACKET

    Close_BRACKET  shift, and go to state 34


state 22

   15 Function: ID . Open_BRACKET ParaMeters Close_BRACKET

    Open_BRACKET  shift, and go to state 31


state 23

   26 Function_Head: Data_Type Function .

    $default  reduce using rule 26 (Function_Head)


state 24

    6 Data_Type: INTEGER .
   65 Main_Function: INTEGER . MAIN Open_BRACKET Close_BRACKET Right_Curly_BRACKET Main_Body Left_Curly_BRACKET

    MAIN  shift, and go to state 10

    $default  reduce using rule 6 (Data_Type)


state 25

   22 Function_Definitions: Function_Definitions Function_Head . Inside_function

    Right_Curly_BRACKET  shift, and go to state 27

    Inside_function  go to state 35


state 26

    1 Start: Global_Declaration Function_Definitions Main_Function .

    $default  reduce using rule 1 (Start)


state 27

   24 Inside_function: Right_Curly_BRACKET . Local_Declarations Function_Body Left_Curly_BRACKET
   25                | Right_Curly_BRACKET . Function_Body Left_Curly_BRACKET

    DECL      shift, and go to state 36
    THEBEGIN  shift, and go to state 37

    Local_Declarations  go to state 38
    Function_Body       go to state 39


state 28

   23 Function_Definitions: Function_Head Inside_function .

    $default  reduce using rule 23 (Function_Definitions)


state 29

    4 Variable_Declaration: Variable_Declaration Data_Type Array_Variable_Function . SemiColon
    8 Array_Variable_Function: Array_Variable_Function . Comma_Operator Array
    9                        | Array_Variable_Function . Comma_Operator ID
   10                        | Array_Variable_Function . Comma_Operator Function

    SemiColon       shift, and go to state 40
    Comma_Operator  shift, and go to state 33


state 30

   14 Array: ID Right_Square_Bracket . Integer_Constant Left_Square_Bracket

    Integer_Constant  shift, and go to state 41


state 31

   15 Function: ID Open_BRACKET . ParaMeters Close_BRACKET

    INTEGER  shift, and go to state 6
    BOOL     shift, and go to state 7

    Data_Type   go to state 42
    ParaMeters  go to state 43


state 32

    5 Variable_Declaration: Data_Type Array_Variable_Function SemiColon .

    $default  reduce using rule 5 (Variable_Declaration)


state 33

    8 Array_Variable_Function: Array_Variable_Function Comma_Operator . Array
    9                        | Array_Variable_Function Comma_Operator . ID
   10                        | Array_Variable_Function Comma_Operator . Function

    ID  shift, and go to state 44

    Array     go to state 45
    Function  go to state 46


state 34

   65 Main_Function: INTEGER MAIN Open_BRACKET Close_BRACKET . Right_Curly_BRACKET Main_Body Left_Curly_BRACKET

    Right_Curly_BRACKET  shift, and go to state 47


state 35

   22 Function_Definitions: Function_Definitions Function_Head Inside_function .

    $default  reduce using rule 22 (Function_Definitions)


state 36

   27 Local_Declarations: DECL . Function_Variable_Declaration ENDDECL

    INTEGER  shift, and go to state 6
    BOOL     shift, and go to state 7

    Data_Type                      go to state 48
    Function_Variable_Declaration  go to state 49


state 37

   34 Function_Body: THEBEGIN . Statements END

    IF      shift, and go to state 50
    WHILE   shift, and go to state 51
    RETURN  shift, and go to state 52
    READ    shift, and go to state 53
    WRITE   shift, and go to state 54
    ID      shift, and go to state 55

    Statements  go to state 56
    Stmnt       go to state 57


state 38

   24 Inside_function: Right_Curly_BRACKET Local_Declarations . Function_Body Left_Curly_BRACKET

    THEBEGIN  shift, and go to state 37

    Function_Body  go to state 58


state 39

   25 Inside_function: Right_Curly_BRACKET Function_Body . Left_Curly_BRACKET

    Left_Curly_BRACKET  shift, and go to state 59


state 40

    4 Variable_Declaration: Variable_Declaration Data_Type Array_Variable_Function SemiColon .

    $default  reduce using rule 4 (Variable_Declaration)


state 41

   14 Array: ID Right_Square_Bracket Integer_Constant . Left_Square_Bracket

    Left_Square_Bracket  shift, and go to state 60


state 42

   17 ParaMeters: Data_Type . Parameter_Ids_Pointer

    ID          shift, and go to state 61
    Pointer_ID  shift, and go to state 62

    Parameter_Ids_Pointer  go to state 63


state 43

   15 Function: ID Open_BRACKET ParaMeters . Close_BRACKET
   16 ParaMeters: ParaMeters . SemiColon Data_Type Parameter_Ids_Pointer

    SemiColon      shift, and go to state 64
    Close_BRACKET  shift, and go to state 65


state 44

    9 Array_Variable_Function: Array_Variable_Function Comma_Operator ID .
   14 Array: ID . Right_Square_Bracket Integer_Constant Left_Square_Bracket
   15 Function: ID . Open_BRACKET ParaMeters Close_BRACKET

    Right_Square_Bracket  shift, and go to state 30
    Open_BRACKET          shift, and go to state 31

    $default  reduce using rule 9 (Array_Variable_Function)


state 45

    8 Array_Variable_Function: Array_Variable_Function Comma_Operator Array .

    $default  reduce using rule 8 (Array_Variable_Function)


state 46

   10 Array_Variable_Function: Array_Variable_Function Comma_Operator Function .

    $default  reduce using rule 10 (Array_Variable_Function)


state 47

   65 Main_Function: INTEGER MAIN Open_BRACKET Close_BRACKET Right_Curly_BRACKET . Main_Body Left_Curly_BRACKET

    DECL      shift, and go to state 36
    THEBEGIN  shift, and go to state 37

    Local_Declarations  go to state 66
    Function_Body       go to state 67
    Main_Body           go to state 68


state 48

   29 Function_Variable_Declaration: Data_Type . Local_Variable SemiColon

    ID  shift, and go to state 69

    Local_Variable  go to state 70


state 49

   27 Local_Declarations: DECL Function_Variable_Declaration . ENDDECL
   28 Function_Variable_Declaration: Function_Variable_Declaration . Data_Type Local_Variable SemiColon

    ENDDECL  shift, and go to state 71
    INTEGER  shift, and go to state 6
    BOOL     shift, and go to state 7

    Data_Type  go to state 72


state 50

   36 Stmnt: IF . Expressions THEN Statements ELSE Statements ENDIF SemiColon
   37      | IF . Expressions THEN Statements ENDIF SemiColon

    Open_BRACKET      shift, and go to state 73
    ID                shift, and go to state 74
    Integer_Constant  shift, and go to state 75

    $default  reduce using rule 51 (Elements)

    Expressions      go to state 76
    AriExps          go to state 77
    Array_Value      go to state 78
    Elements         go to state 79
    Function_In_Use  go to state 80


state 51

   38 Stmnt: WHILE . Expressions DO Statements ENDWHILE SemiColon

    Open_BRACKET      shift, and go to state 73
    ID                shift, and go to state 74
    Integer_Constant  shift, and go to state 75

    $default  reduce using rule 51 (Elements)

    Expressions      go to state 81
    AriExps          go to state 77
    Array_Value      go to state 78
    Elements         go to state 79
    Function_In_Use  go to state 80


state 52

   39 Stmnt: RETURN . Expressions SemiColon

    Open_BRACKET      shift, and go to state 73
    ID                shift, and go to state 74
    Integer_Constant  shift, and go to state 75

    $default  reduce using rule 51 (Elements)

    Expressions      go to state 82
    AriExps          go to state 77
    Array_Value      go to state 78
    Elements         go to state 79
    Function_In_Use  go to state 80


state 53

   40 Stmnt: READ . Open_BRACKET Elements Close_BRACKET SemiColon

    Open_BRACKET  shift, and go to state 83


state 54

   41 Stmnt: WRITE . Open_BRACKET Expressions Close_BRACKET SemiColon

    Open_BRACKET  shift, and go to state 84


state 55

   35 Stmnt: ID . Assignment_OP Expressions SemiColon

    Assignment_OP  shift, and go to state 85


state 56

   32 Statements: Statements . Stmnt
   34 Function_Body: THEBEGIN Statements . END

    END     shift, and go to state 86
    IF      shift, and go to state 50
    WHILE   shift, and go to state 51
    RETURN  shift, and go to state 52
    READ    shift, and go to state 53
    WRITE   shift, and go to state 54
    ID      shift, and go to state 55

    Stmnt  go to state 87


state 57

   33 Statements: Stmnt .

    $default  reduce using rule 33 (Statements)


state 58

   24 Inside_function: Right_Curly_BRACKET Local_Declarations Function_Body . Left_Curly_BRACKET

    Left_Curly_BRACKET  shift, and go to state 88


state 59

   25 Inside_function: Right_Curly_BRACKET Function_Body Left_Curly_BRACKET .

    $default  reduce using rule 25 (Inside_function)


state 60

   14 Array: ID Right_Square_Bracket Integer_Constant Left_Square_Bracket .

    $default  reduce using rule 14 (Array)


state 61

   20 Parameter_Ids_Pointer: ID .

    $default  reduce using rule 20 (Parameter_Ids_Pointer)


state 62

   21 Parameter_Ids_Pointer: Pointer_ID .

    $default  reduce using rule 21 (Parameter_Ids_Pointer)


state 63

   17 ParaMeters: Data_Type Parameter_Ids_Pointer .
   18 Parameter_Ids_Pointer: Parameter_Ids_Pointer . Comma_Operator ID
   19                      | Parameter_Ids_Pointer . Comma_Operator Pointer_ID

    Comma_Operator  shift, and go to state 89

    $default  reduce using rule 17 (ParaMeters)


state 64

   16 ParaMeters: ParaMeters SemiColon . Data_Type Parameter_Ids_Pointer

    INTEGER  shift, and go to state 6
    BOOL     shift, and go to state 7

    Data_Type  go to state 90


state 65

   15 Function: ID Open_BRACKET ParaMeters Close_BRACKET .

    $default  reduce using rule 15 (Function)


state 66

   66 Main_Body: Local_Declarations . Function_Body

    THEBEGIN  shift, and go to state 37

    Function_Body  go to state 91


state 67

   67 Main_Body: Function_Body .

    $default  reduce using rule 67 (Main_Body)


state 68

   65 Main_Function: INTEGER MAIN Open_BRACKET Close_BRACKET Right_Curly_BRACKET Main_Body . Left_Curly_BRACKET

    Left_Curly_BRACKET  shift, and go to state 92


state 69

   31 Local_Variable: ID .

    $default  reduce using rule 31 (Local_Variable)


state 70

   29 Function_Variable_Declaration: Data_Type Local_Variable . SemiColon
   30 Local_Variable: Local_Variable . Comma_Operator ID

    SemiColon       shift, and go to state 93
    Comma_Operator  shift, and go to state 94


state 71

   27 Local_Declarations: DECL Function_Variable_Declaration ENDDECL .

    $default  reduce using rule 27 (Local_Declarations)


state 72

   28 Function_Variable_Declaration: Function_Variable_Declaration Data_Type . Local_Variable SemiColon

    ID  shift, and go to state 69

    Local_Variable  go to state 95


state 73

   43 Expressions: Open_BRACKET . Expressions Log_OP Expressions Close_BRACKET
   44            | Open_BRACKET . L_NOT Expressions Close_BRACKET

    Open_BRACKET      shift, and go to state 73
    L_NOT             shift, and go to state 96
    ID                shift, and go to state 74
    Integer_Constant  shift, and go to state 75

    $default  reduce using rule 51 (Elements)

    Expressions      go to state 97
    AriExps          go to state 77
    Array_Value      go to state 78
    Elements         go to state 79
    Function_In_Use  go to state 80


state 74

   50 Array_Value: ID . Right_Square_Bracket Elements Left_Square_Bracket
   53 Elements: ID .
   56 Function_In_Use: ID . Open_BRACKET AriExps Close_BRACKET

    Right_Square_Bracket  shift, and go to state 98
    Open_BRACKET          shift, and go to state 99

    $default  reduce using rule 53 (Elements)


state 75

   52 Elements: Integer_Constant .

    $default  reduce using rule 52 (Elements)


state 76

   36 Stmnt: IF Expressions . THEN Statements ELSE Statements ENDIF SemiColon
   37      | IF Expressions . THEN Statements ENDIF SemiColon

    THEN  shift, and go to state 100


state 77

   42 Expressions: AriExps .
   45 AriExps: AriExps . PLUS AriExps
   46        | AriExps . MINUS AriExps
   47        | AriExps . MULTIPLY AriExps
   48        | AriExps . DIVIDE AriExps

    PLUS      shift, and go to state 101
    MINUS     shift, and go to state 102
    MULTIPLY  shift, and go to state 103
    DIVIDE    shift, and go to state 104

    $default  reduce using rule 42 (Expressions)


state 78

   54 Elements: Array_Value .

    $default  reduce using rule 54 (Elements)


state 79

   49 AriExps: Elements .

    $default  reduce using rule 49 (AriExps)


state 80

   55 Elements: Function_In_Use .

    $default  reduce using rule 55 (Elements)


state 81

   38 Stmnt: WHILE Expressions . DO Statements ENDWHILE SemiColon

    DO  shift, and go to state 105


state 82

   39 Stmnt: RETURN Expressions . SemiColon

    SemiColon  shift, and go to state 106


state 83

   40 Stmnt: READ Open_BRACKET . Elements Close_BRACKET SemiColon

    ID                shift, and go to state 74
    Integer_Constant  shift, and go to state 75

    $default  reduce using rule 51 (Elements)

    Array_Value      go to state 78
    Elements         go to state 107
    Function_In_Use  go to state 80


state 84

   41 Stmnt: WRITE Open_BRACKET . Expressions Close_BRACKET SemiColon

    Open_BRACKET      shift, and go to state 73
    ID                shift, and go to state 74
    Integer_Constant  shift, and go to state 75

    $default  reduce using rule 51 (Elements)

    Expressions      go to state 108
    AriExps          go to state 77
    Array_Value      go to state 78
    Elements         go to state 79
    Function_In_Use  go to state 80


state 85

   35 Stmnt: ID Assignment_OP . Expressions SemiColon

    Open_BRACKET      shift, and go to state 73
    ID                shift, and go to state 74
    Integer_Constant  shift, and go to state 75

    $default  reduce using rule 51 (Elements)

    Expressions      go to state 109
    AriExps          go to state 77
    Array_Value      go to state 78
    Elements         go to state 79
    Function_In_Use  go to state 80


state 86

   34 Function_Body: THEBEGIN Statements END .

    $default  reduce using rule 34 (Function_Body)


state 87

   32 Statements: Statements Stmnt .

    $default  reduce using rule 32 (Statements)


state 88

   24 Inside_function: Right_Curly_BRACKET Local_Declarations Function_Body Left_Curly_BRACKET .

    $default  reduce using rule 24 (Inside_function)


state 89

   18 Parameter_Ids_Pointer: Parameter_Ids_Pointer Comma_Operator . ID
   19                      | Parameter_Ids_Pointer Comma_Operator . Pointer_ID

    ID          shift, and go to state 110
    Pointer_ID  shift, and go to state 111


state 90

   16 ParaMeters: ParaMeters SemiColon Data_Type . Parameter_Ids_Pointer

    ID          shift, and go to state 61
    Pointer_ID  shift, and go to state 62

    Parameter_Ids_Pointer  go to state 112


state 91

   66 Main_Body: Local_Declarations Function_Body .

    $default  reduce using rule 66 (Main_Body)


state 92

   65 Main_Function: INTEGER MAIN Open_BRACKET Close_BRACKET Right_Curly_BRACKET Main_Body Left_Curly_BRACKET .

    $default  reduce using rule 65 (Main_Function)


state 93

   29 Function_Variable_Declaration: Data_Type Local_Variable SemiColon .

    $default  reduce using rule 29 (Function_Variable_Declaration)


state 94

   30 Local_Variable: Local_Variable Comma_Operator . ID

    ID  shift, and go to state 113


state 95

   28 Function_Variable_Declaration: Function_Variable_Declaration Data_Type Local_Variable . SemiColon
   30 Local_Variable: Local_Variable . Comma_Operator ID

    SemiColon       shift, and go to state 114
    Comma_Operator  shift, and go to state 94


state 96

   44 Expressions: Open_BRACKET L_NOT . Expressions Close_BRACKET

    Open_BRACKET      shift, and go to state 73
    ID                shift, and go to state 74
    Integer_Constant  shift, and go to state 75

    $default  reduce using rule 51 (Elements)

    Expressions      go to state 115
    AriExps          go to state 77
    Array_Value      go to state 78
    Elements         go to state 79
    Function_In_Use  go to state 80


state 97

   43 Expressions: Open_BRACKET Expressions . Log_OP Expressions Close_BRACKET

    LESSTHAN       shift, and go to state 116
    LESSTHANEQ     shift, and go to state 117
    L_AND          shift, and go to state 118
    L_OR           shift, and go to state 119
    GREATERTHAN    shift, and go to state 120
    GREATERTHANEQ  shift, and go to state 121
    EQUAL          shift, and go to state 122
    NOTEQUAL       shift, and go to state 123

    Log_OP  go to state 124


state 98

   50 Array_Value: ID Right_Square_Bracket . Elements Left_Square_Bracket

    ID                shift, and go to state 74
    Integer_Constant  shift, and go to state 75

    $default  reduce using rule 51 (Elements)

    Array_Value      go to state 78
    Elements         go to state 125
    Function_In_Use  go to state 80


state 99

   56 Function_In_Use: ID Open_BRACKET . AriExps Close_BRACKET

    ID                shift, and go to state 74
    Integer_Constant  shift, and go to state 75

    $default  reduce using rule 51 (Elements)

    AriExps          go to state 126
    Array_Value      go to state 78
    Elements         go to state 79
    Function_In_Use  go to state 80


state 100

   36 Stmnt: IF Expressions THEN . Statements ELSE Statements ENDIF SemiColon
   37      | IF Expressions THEN . Statements ENDIF SemiColon

    IF      shift, and go to state 50
    WHILE   shift, and go to state 51
    RETURN  shift, and go to state 52
    READ    shift, and go to state 53
    WRITE   shift, and go to state 54
    ID      shift, and go to state 55

    Statements  go to state 127
    Stmnt       go to state 57


state 101

   45 AriExps: AriExps PLUS . AriExps

    ID                shift, and go to state 74
    Integer_Constant  shift, and go to state 75

    $default  reduce using rule 51 (Elements)

    AriExps          go to state 128
    Array_Value      go to state 78
    Elements         go to state 79
    Function_In_Use  go to state 80


state 102

   46 AriExps: AriExps MINUS . AriExps

    ID                shift, and go to state 74
    Integer_Constant  shift, and go to state 75

    $default  reduce using rule 51 (Elements)

    AriExps          go to state 129
    Array_Value      go to state 78
    Elements         go to state 79
    Function_In_Use  go to state 80


state 103

   47 AriExps: AriExps MULTIPLY . AriExps

    ID                shift, and go to state 74
    Integer_Constant  shift, and go to state 75
